# learn-ogre-3d

./: .gitignore  CMakeLists.txt
core/include/app/: App.hpp
core/src/: main.cpp
core/src/app/: App.cpp
